--- a/src/main/java/com/palantir/gerrit/gerritci/ui/client/buttonsPanel.html
+++ b/src/main/java/com/palantir/gerrit/gerritci/ui/client/buttonsPanel.html
@@ -1,26 +1,67 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <style>
             body{
-                position:relative;
-                z-index:1;
-                height:100%;
-                min-width: 800px;
-                max-width: 900px;
-            }
-            .box{
-                margin: 10;
-                width: 400px;
-                background-color: Azure ;
-                padding: 15px;
-                text-alight:left;
-                font-family: "Blender","Helvetica Neue",Helvetica,Arial,sans-serif;
-            }
+                  position:relative;
+                  z-index:1;
+                  height:200%;
+                  min-width: 800px;
+                  max-width: 900px;
+              }
+            .gerrit-ci .gwt-Button {
+                  -webkit-border-radius: 2;
+                  -moz-border-radius: 2;
+                  border-radius: 2px;
+                  font-family: Georgia;
+                  color: #ffffff;
+                  font-size: 14px;
+                  background: #576873;
+                  padding: 2px 7px 2px 7px;
+                  text-decoration: none;
+              }
+            .gerrit-ci .gwt-Buttons:hover {
+                  background: #454d52;
+                  text-decoration: none;
+              }
+            div.row {
+                  border: 10px solid;
+                  border-color: white;
+              }
+            .container div.row:last-child {
+                  border-bottom: 1px solid;
+              }
+            .col-sm-6 {
+                  height: 280px;
+                  padding-top: 40px
+              }
+            .gwt-TextBox {
+                  width: 180px;
+              }
+            p {
+                  color:#5A9927;
+              }
+            .label {
+                  font-weight: bold;
+                  font-color: black;
+              }
+            sectionleft {
+                  border-style: SOLID;
+                  border-width: 10px;
+                  border-color: white;
+                  background-color: #F5FFFF;
+                  width:400px;
+                  float:left;
+                  padding:10px;
+              }
+            h1 {
+                  font-size: 20px;
+              }
         </style>
     </head>
     <TABLE BORDER="0">
+        <div id="projectName"></div>
         <TR>
             <TD><div id="addVerifyJob"></div></TD>
             <TD><div id="addPublishJob"></div></TD>
