--- a/src/main/java/com/palantir/gerrit/gerritci/ui/client/publishJobPanel.html
+++ b/src/main/java/com/palantir/gerrit/gerritci/ui/client/publishJobPanel.html
@@ -1,59 +1,41 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html>
-<html>
-    <head>
-        <style>
-            body {} .jobPanel {
-                    margin: 10;
-                    width: 900px;
-                    background-color: #FAFFFA;
-                    text-alight: left;
-                    font-family: Arial, sans-serif;
-                }
-                sectionleft {
-                    background-color: #FCFCFC;
-                    width: 300px;
-                    float: left;
-                    padding: 20px;
-                }
-                sectionright {
-                    width: 500px;
-                    float: right;
-                    padding: 20px;
-                }
-        </style>
-    </head>
-    <div class="jobPanel">
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
+<div class="sectionleft">
+    <div class="container-fluid">
+        <div class="row">
         <h1>Publish Job</h1>
-        <div id="jobIdLabel"></div>
-        <sectionleft>
-            <p id="publishLabel" class="label" p>
-                Publish Job Command
-            </p>
-            <div id="publishCommand"></div>
-            <p id="publishCommandDescription" class="description">
+    <div class="col-sm-6" style="background-color:#bbea94;">
+            <label id="jobIdLabel" class="label"></label>
+            <label>Publish Command</label>
+            <div><div id="publishCommand"></div></div>
+            <p id="cronCommandDescription" class="description">
                 Simple command or a shell script to run for publish jobs.
             </p>
-            <p id="publishBranchRegexLabel" class="label">Regex for branches to publish</p>
-            <div id="publishBranchRegex"></div>
+            <label id="publishBranchRegexLabel">Regex for branches to publish</label>
+            <div><div id="publishBranchRegex"></div></div>
             <p id="publishBranchRegexDescription"></p>
-        </sectionleft>
-        <sectionright>
-            <p id="timeoutsLabel" class="label" p>
-                Timeout Minutes
-            </p>
-            <div id="timeoutMinutes"></div>
+            <div id="delete"></div>
+        </div>
+    <div class="col-sm-6" style="background-color:#d6f3bd;">
+        <label id="timeoutsLabel">Timeout Minutes</label>
+            <div><div id="timeoutMinutes"></div></div>
             <p id="timeoutMinutesDescription" class="description">
                 Jenkins will wait this many minutes before terminating the build.
             </p>
-            <p id="junitLabel" class="label" p>
-                Junit Publish Settings
-            </p>
-            <div id="junitEnabled"></div>
-            <div id="junitPath"></div>
+            <label id="junitLabel">Junit Publish Settings</label>
+            <div><a id="junitEnabled"></a>
+            <p class="description">
+                Enable junit test reports.</p></div>
+            <div><div id="junitPath"></div></div>
             <p id="junitPathDescription" class="description">
-                Path to use for junit results (e.g. build/test-results/*.xml).
-            </p>
-        </sectionright>
+                Path to use for junit results (e.g. build/test-results/*.xml).</p>
+        </div>
     </div>
+</div>
+</body>
 </html>
