--- a/src/main/java/com/palantir/gerrit/gerritci/ui/client/cronPanel.html
+++ b/src/main/java/com/palantir/gerrit/gerritci/ui/client/cronPanel.html
@@ -13,13 +13,13 @@
 <div class="sectionleft">
     <div class="container-fluid">
         <div class="row">
-            <h1>Time-Triggered Job</h1>
+            <h1>Scheduled (cron) Job</h1>
             <div class="col-sm-6" style="background-color:#bbea94;">
                 <label id="jobIdLabel" class="label"></label>
-                <label>Time-Triggered Command</label>
+                <label>Scheduled (cron) Command</label>
                 <div><div id="cronCommand"></div></div>
                 <p id="cronCommandDescription" class="description">
-                    Simple command or a shell script to run for time-triggered jobs.
+                    Simple command or a shell script to run for Scheduled (cron) jobs.
                 </p>
                 <label id="cronScheduleLabel">Build Schedule</label>
                 <div><div id="cronJob"></div><div id=toggleButton></div></div>
