store everything in git

--- a/src/main/java/com/palantir/gerrit/gerritci/ui/client/cronPanel.html
+++ b/src/main/java/com/palantir/gerrit/gerritci/ui/client/cronPanel.html
@@ -16,6 +16,7 @@
             <h1>Scheduled (cron) Job</h1>
             <div class="col-sm-6" style="background-color:#bbea94;">
                 <label id="jobIdLabel" class="label"></label>
+                <div><div id="jobName"></div></div>
                 <label>Scheduled (cron) Command</label>
                 <div><div id="cronCommand"></div></div>
                 <p id="cronCommandDescription" class="description">
