--- a/src/main/java/com/palantir/gerrit/gerritci/ui/client/publishJobPanel.html
+++ b/src/main/java/com/palantir/gerrit/gerritci/ui/client/publishJobPanel.html
@@ -11,6 +11,7 @@
         <h1>Publish Job</h1>
     <div class="col-sm-6" style="background-color:#bbea94;">
             <label id="jobIdLabel" class="label"></label>
+            <div><div id="jobName"></div></div>
             <label>Publish Command</label>
             <div><div id="publishCommand"></div></div>
             <p id="cronCommandDescription" class="description">
