--- a/src/main/java/com/palantir/gerrit/gerritci/ui/client/verifyJobPanel.html
+++ b/src/main/java/com/palantir/gerrit/gerritci/ui/client/verifyJobPanel.html
@@ -11,6 +11,7 @@
         <h1>Verify Job</h1>
     <div class="col-sm-6" style="background-color:#bbea94;">
             <label id="jobIdLabel" class="label"></label>
+            <div><div id="jobName"></div></div>
             <label>Verify Command</label>
             <div><div id="verifyCommand"></div></div>
             <p id="cronCommandDescription" class="description">
